# Telegram_Restricted_Media_Downloader

./: AGENTS.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  verify_yt_dlp.py
.sisyphus/drafts/: add-chat-username-placeholder.md  keyword-filter.md
config/gallery-dl/: config.json
module/: __init__.py  app.py  bot.py  config.py  downloader.py  enums.py  filter.py  path_tool.py  task.py  util.py
res/: yt-dlp-x.sh
